--- a/proxy.config.json
+++ b/proxy.config.json
@@ -3,5 +3,11 @@
     "target": "http://localhost:8080",
     "secure": false,
     "logLevel": "debug"
+  },
+
+  "/file": {
+    "target": "http://localhost:8080",
+    "secure": false,
+    "logLevel": "debug"
   }
 }
