--- a/proxy.config.json
+++ b/proxy.config.json
@@ -2,12 +2,14 @@
   "/api": {
     "target": "http://localhost:8080",
     "secure": false,
+    "changeOrigin": true,
     "logLevel": "debug"
   },
 
   "/file": {
     "target": "http://localhost:8080",
     "secure": false,
+    "changeOrigin": true,
     "logLevel": "debug"
   }
 }
