angularCompilerOption: enable more strict checking

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -5,7 +5,10 @@
     "types": []
   },
   "angularCompilerOptions": {
-    "enableIvy": false
+    "enableIvy": false,
+    "strictMetadataEmit": true,
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
   },
   "exclude": [
     "test.ts",
