--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-  id "com.moowork.node" version "1.2.0"
+  id "com.moowork.node" version "1.3.1"
+  id 'com.github.ben-manes.versions' version '0.27.0'
 }
 
 apply plugin:'java'
