improve overall accessibility

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ng-select/ng-select": "^3.6.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/countdown": "0.0.7",
     "bootstrap": "^4.4.0",
     "core-js": "^2.6.9",
     "countdown": "^2.6.0",
@@ -36,7 +37,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
