--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,12 +1,11 @@
 {
-  "extends": "../tsconfig.base.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "types": []
   },
   "angularCompilerOptions": {
     "strictTemplates": true,
-    "strictMetadataEmit": true,
     "strictInjectionParameters": true
   },
   "files": [
