--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@types/countdown": "0.0.7",
     "bootstrap": "^4.4.0",
-    "core-js": "^2.6.9",
+    "classlist.js": "^1.1.20150312",
+    "core-js": "^2.6.11",
     "countdown": "^2.6.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
