--- a/proxy.config.json
+++ b/proxy.config.json
@@ -13,6 +13,20 @@
     "logLevel": "debug"
   },
 
+  "/openid": {
+    "target": "http://localhost:8080",
+    "secure": false,
+    "changeOrigin": true,
+    "logLevel": "debug"
+  },
+
+  "/logout": {
+    "target": "http://localhost:8080",
+    "secure": false,
+    "changeOrigin": true,
+    "logLevel": "debug"
+  },
+
   "/resources": {
     "target": "http://localhost:8080",
     "secure": false,
