update configuration: dev mode should have .map files&co for debugging

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,14 @@
             "scripts": []
           },
           "configurations": {
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -66,8 +74,12 @@
           "configurations": {
             "production": {
               "browserTarget": "alfio-public-frontend:build:production"
+            },
+            "development": {
+              "browserTarget": "alfio-public-frontend:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
