--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ node {
   version = '10.15.3'
   npmVersion = '6.4.1'
   download = true
-//   distBaseUrl = "https://direct.nodejs.org/dist"
+  distBaseUrl = "https://direct.nodejs.org/dist"
   workDir = file("${project.projectDir}/node")
   nodeModulesDir = file("${project.projectDir}/")
 }
